--- a/S.T.A.L.K.E.R.: Shadow of Chernobyl/userHQ.ltx
+++ b/S.T.A.L.K.E.R.: Shadow of Chernobyl/userHQ.ltx
@@ -1,3 +1,4 @@
+// -smap4096 command line parameter for max quality shadows
 // texture_lod is Texture Detail in Video options, 0 is max quality, 4 is max performance
 // rs_vis_distance is Vision Distance in Video options, 1.5 is max quality, 0.4 is max performance
 // r__geometry_lod is Object Detail in Video options, 1.2 is max quality, 0.1 is max performance
