--- a/S.T.A.L.K.E.R.: Shadow of Chernobyl/userHQ.ltx
+++ b/S.T.A.L.K.E.R.: Shadow of Chernobyl/userHQ.ltx
@@ -1,3 +1,5 @@
+// r2_gi (Global Illumination adds too much light, and alters original look of game, NOT VANILLA DONT USE)
+// r2_ls_bloom_fast adds too much blur, and alters original look of game, NOT VANILLA DONT USE)
 // -smap4096 command line parameter for max quality shadows
 // texture_lod is Texture Detail in Video options, 0 is max quality, 4 is max performance
 // rs_vis_distance is Vision Distance in Video options, 1.5 is max quality, 0.4 is max performance
