--- a/S.T.A.L.K.E.R.: Shadow of Chernobyl/userHQ.ltx
+++ b/S.T.A.L.K.E.R.: Shadow of Chernobyl/userHQ.ltx
@@ -128,8 +128,8 @@ r1_glows_per_frame 32
 r1_lmodel_lerp 0.1
 r1_pps_u 0.
 r1_pps_v 0.
-r1_ssa_lod_a 64.
-r1_ssa_lod_b 48.
+r1_ssa_lod_a 96.
+r1_ssa_lod_b 64.
 r1_tf_mipbias -0.5
 r2_aa off
 r2_aa_break 0.800000,0.500000,0.000000
@@ -186,7 +186,7 @@ r2_zfill_depth 0.5
 r2em 2.2
 r__detail_density 0.2
 r__geometry_lod 1.2
-r__supersample 2
+r__supersample 4
 r__tf_aniso 16
 renderer renderer_r2
 rs_c_brightness 1.
@@ -196,7 +196,7 @@ rs_fullscreen on
 rs_refresh_60hz off
 rs_stats off
 rs_v_sync off
-rs_vis_distance 1.
+rs_vis_distance 1.5
 snd_acceleration on
 snd_cache_size 32
 snd_efx off
