--- a/S.T.A.L.K.E.R.: Shadow of Chernobyl/userHQ.ltx
+++ b/S.T.A.L.K.E.R.: Shadow of Chernobyl/userHQ.ltx
@@ -7,8 +7,8 @@
 // r__detail_density is Grass Density in Video options, 0.2 is max quality, 0.6 is max performance
 // r__supersample is Antialiasing in Video options, 4 is max quality, 1 is max performance
 // r__tf_aniso is Anisotropic filtering in Video options, 16 is max quality, 1 is max performance
-// r_sun_near 40 fixes disappearing shadows at distance
-// r_sun_near_border 1 fixes glitchy shadows using widescreen resolutions 
+// r_sun_near 30 fixes disappearing shadows at distance
+// r_sun_near_border 1 fixes glitchy shadows on the sides of the monitor using widescreen resolutions 
 
 _preset Extreme
 ai_use_torch_dynamic_lights on
