--- a/S.T.A.L.K.E.R.: Shadow of Chernobyl/userHQ.ltx
+++ b/S.T.A.L.K.E.R.: Shadow of Chernobyl/userHQ.ltx
@@ -186,6 +186,8 @@ r2_wait_sleep 0
 r2_zfill off
 r2_zfill_depth 0.5
 r2em 2.2
+r_sun_near 30
+r_sun_near_border 1
 r__detail_density 0.2
 r__geometry_lod 1.2
 r__supersample 4
