--- a/S.T.A.L.K.E.R.: Shadow of Chernobyl/userHQ.ltx
+++ b/S.T.A.L.K.E.R.: Shadow of Chernobyl/userHQ.ltx
@@ -7,8 +7,8 @@
 // r__detail_density is Grass Density in Video options, 0.2 is max quality, 0.6 is max performance
 // r__supersample is Antialiasing in Video options, 4 is max quality, 1 is max performance
 // r__tf_aniso is Anisotropic filtering in Video options, 16 is max quality, 1 is max performance
-// r_sun_near 30 fixes disappearing shadows at distance
-// r_sun_near_border 1 fixes glitchy shadows on the sides of the monitor using widescreen resolutions 
+// r2_sun_near 30 fixes disappearing shadows at distance
+// r2_sun_near_border 1 fixes glitchy shadows on the sides of the monitor using widescreen resolutions 
 
 _preset Extreme
 ai_use_torch_dynamic_lights on
@@ -171,8 +171,8 @@ r2_sun_focus on
 r2_sun_lumscale 1.
 r2_sun_lumscale_amb 0.5
 r2_sun_lumscale_hemi 1.
-r2_sun_near 12.
-r2_sun_near_border 0.75
+r2_sun_near 30.
+r2_sun_near_border 1.00
 r2_sun_tsm on
 r2_sun_tsm_bias -0.01
 r2_sun_tsm_proj 0.3
@@ -186,8 +186,6 @@ r2_wait_sleep 0
 r2_zfill off
 r2_zfill_depth 0.5
 r2em 2.2
-r_sun_near 30
-r_sun_near_border 1
 r__detail_density 0.2
 r__geometry_lod 1.2
 r__supersample 4
