--- a/S.T.A.L.K.E.R.: Shadow of Chernobyl/userHQ.ltx
+++ b/S.T.A.L.K.E.R.: Shadow of Chernobyl/userHQ.ltx
@@ -7,8 +7,9 @@
 // r__detail_density is Grass Density in Video options, 0.2 is max quality, 0.6 is max performance
 // r__supersample is Antialiasing in Video options, 4 is max quality, 1 is max performance
 // r__tf_aniso is Anisotropic filtering in Video options, 16 is max quality, 1 is max performance
-// r2_sun_near 30 fixes disappearing shadows at distance
+// r2_sun_near 50 fixes disappearing shadows at distance
 // r2_sun_near_border 1 fixes glitchy shadows on the sides of the monitor using widescreen resolutions 
+// r2_sun_depth_near_bias -0.00001 fixes shadow shimmer on textures
 
 _preset Extreme
 ai_use_torch_dynamic_lights on
