--- a/S.T.A.L.K.E.R.: Call of Pripyat/userHQ.ltx
+++ b/S.T.A.L.K.E.R.: Call of Pripyat/userHQ.ltx
@@ -68,7 +68,7 @@ bind quick_load kF9
 cam_inert 0.
 cam_slide_inert 0.25
 cl_cod_pickup_mode 1
-cl_dynamiccrosshair on
+cl_dynamiccrosshair off
 cl_mpdemosave 0
 con_sensitive 0.15
 draw_downloads 0
@@ -118,21 +118,21 @@ net_dedicated_sleep 5
 net_sv_gpmode 0
 net_sv_log_data off
 net_sv_pending_lim 3
-net_sv_update_rate 30
+net_sv_update_rate 100
 ph_frequency 100.00000
 ph_iterations 18
-r1_detail_textures off
+r1_detail_textures on
 r1_dlights on
 r1_dlights_clip 50.
 r1_fog_luminance 1.1
-r1_glows_per_frame 16
+r1_glows_per_frame 32
 r1_lmodel_lerp 0.1
 r1_pps_u 0.
 r1_pps_v 0.
 r1_software_skinning 0
-r1_ssa_lod_a 64.
-r1_ssa_lod_b 48.
-r1_tf_mipbias 0.
+r1_ssa_lod_a 96.
+r1_ssa_lod_b 64.
+r1_tf_mipbias -0.5
 r2_aa off
 r2_aa_break (0.800000, 0.100000, 0.000000)
 r2_aa_kernel 0.5
@@ -169,8 +169,8 @@ r2_shadow_cascede_zcul off
 r2_slight_fade 1.
 r2_soft_particles on
 r2_soft_water on
-r2_ssa_lod_a 64.
-r2_ssa_lod_b 48.
+r2_ssa_lod_a 96.
+r2_ssa_lod_b 64.
 r2_ssao st_opt_high
 r2_ssao_blur off
 r2_ssao_half_data off
@@ -184,7 +184,7 @@ r2_sun_depth_far_bias -0.00002
 r2_sun_depth_far_scale 1.
 r2_sun_depth_near_bias 0.00001
 r2_sun_depth_near_scale 1.
-r2_sun_details off
+r2_sun_details on
 r2_sun_far 180.
 r2_sun_focus on
 r2_sun_lumscale 1.
@@ -197,7 +197,7 @@ r2_sun_shafts st_opt_high
 r2_sun_tsm on
 r2_sun_tsm_bias -0.01
 r2_sun_tsm_proj 0.3
-r2_tf_mipbias 0.
+r2_tf_mipbias -0.5
 r2_tonemap on
 r2_tonemap_adaptation 1.
 r2_tonemap_amount 0.7
@@ -221,11 +221,11 @@ r3_volumetric_smoke on
 r4_enable_tessellation on
 r4_wireframe off
 r__detail_density 0.2
-r__dtex_range 50.
+r__dtex_range 175.
 r__geometry_lod 1.2
-r__supersample 1
+r__supersample 8
 r__tf_aniso 16
-r__wallmark_ttl 60.
+r__wallmark_ttl 300.
 renderer renderer_r4
 rs_c_brightness 1.
 rs_c_contrast 1.
@@ -233,7 +233,7 @@ rs_c_gamma 1.
 rs_cam_pos off
 rs_fullscreen on
 rs_refresh_60hz off
-rs_skeleton_update 32
+rs_skeleton_update 128
 rs_stats off
 rs_v_sync off
 rs_vis_distance 1.5
