--- a/S.T.A.L.K.E.R.: Call of Pripyat/userHQ.ltx
+++ b/S.T.A.L.K.E.R.: Call of Pripyat/userHQ.ltx
@@ -1,3 +1,6 @@
+// r2_gi is bugged and shows wireframes with glitchy lighting
+// r2_ls_bloom_fast on has worse bloom effects in DX11
+
 _preset Extreme
 ai_aim_max_angle 0.7854
 ai_aim_min_angle 0.19635
