--- a/S.T.A.L.K.E.R.: Shadow of Chernobyl/userHQ.ltx
+++ b/S.T.A.L.K.E.R.: Shadow of Chernobyl/userHQ.ltx
@@ -12,6 +12,8 @@
 // r2_sun_depth_near_bias -0.00001 fixes shadow shimmer on textures
 // r2_sun_depth_far_bias 0 fixes shadows disappearing from a distance
 
+// 4:3 resolutions are required to fix minor shadow glitches on the left and right edges of the screen when using 16:9 resolutions
+
 _preset Extreme
 ai_use_torch_dynamic_lights on
 bemsg 1
