--- a/S.T.A.L.K.E.R.: Shadow of Chernobyl/userHQ.ltx
+++ b/S.T.A.L.K.E.R.: Shadow of Chernobyl/userHQ.ltx
@@ -131,6 +131,7 @@ net_sv_pending_lim 3
 net_sv_update_rate 100
 ph_frequency 100.00000
 ph_iterations 38
+r1_detail_textures on
 r1_dlights on
 r1_dlights_clip 75.
 r1_glows_per_frame 32
