--- a/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHQ.ltx
+++ b/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHQ.ltx
@@ -9,6 +9,7 @@
 // r__supersample is Antialiasing in Video options, 4 is max quality, 1 is max performance
 // r__tf_aniso is Anisotropic filtering in Video options, 16 is max quality, 1 is max performance
 // r2_aa = software antialiasing
+// r2_allow_d1_lights 1 enables DX8 lighting (KEEP DISABLED)
 // r2_sun_near 20 fixes disappearing grass shadows
 // r2_sun_near_border 1 fixes glitchy shadows on the sides of the monitor using widescreen resolutions 
 // r2_sun_depth_near_bias -0.00001 fixes shadow shimmer on textures
