--- a/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHQ.ltx
+++ b/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHQ.ltx
@@ -1,4 +1,7 @@
 // Enhanced Edition High Quality Script
+// r1 = DirectX 8 mode
+// r2 = DirectX 9 mode
+// r3 = DirectX 10 mode
 // r2_gi (Global Illumination adds too much light, and alters original look of game, NOT VANILLA DONT USE)
 // r2_ls_bloom_fast adds too much blur, and alters original look of game, NOT VANILLA DONT USE)
 // -smap4096 command line parameter for max quality shadows
@@ -149,6 +152,8 @@ r2_aa_break 0.800000,0.500000,0.000000
 r2_aa_kernel 0.5
 r2_aa_weight 0.250000,0.250000,0.000000
 r2_allow_r1_lights off
+r2_dof_enable off
+r2_dof_far 10000.000
 r2_gi off
 r2_gi_clip 0.001
 r2_gi_depth 1
