--- a/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHQ.ltx
+++ b/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHQ.ltx
@@ -13,6 +13,7 @@
 // r__tf_aniso is Anisotropic filtering in Video options, 16 is max quality, 1 is max performance
 // r2_aa = software antialiasing
 // r2_allow_d1_lights 1 enables DX8 lighting (KEEP DISABLED)
+// r2_slight_fade sets distance of lighting
 // r2_sun_near 20 fixes disappearing grass shadows
 // r2_sun_near_border 1 fixes glitchy shadows on the sides of the monitor using widescreen resolutions 
 // r2_sun_depth_near_bias -0.00001 fixes shadow shimmer on textures
@@ -151,14 +152,8 @@ r2_allow_r1_lights off
 r2_dof_enable off
 r2_gi off
 r2_ls_bloom_fast off
-r2_ls_depth_bias -0.0003
-r2_ls_depth_scale 1.00001
-r2_ls_dsm_kernel 0.7
-r2_ls_psm_kernel 0.7
 r2_ls_squality 1.
-r2_ls_ssm_kernel 0.7
 r2_mblur 0.
-r2_parallax_h 0.02
 r2_slight_fade 2.
 r2_ssa_lod_a 96.
 r2_ssa_lod_b 64.
