--- a/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHQ.ltx
+++ b/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHQ.ltx
@@ -155,6 +155,8 @@ r2_ls_bloom_fast off
 r2_ls_squality 1.
 r2_mblur 0.
 r2_slight_fade 2.
+r2_soft_particles on
+r2_soft_water on
 r2_ssa_lod_a 96.
 r2_ssa_lod_b 64.
 r2_sun on
