--- a/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHQ.ltx
+++ b/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHQ.ltx
@@ -3,6 +3,7 @@
 // r2 = DirectX 9 mode
 // r3 = DirectX 10 mode
 // r2_gi (Global Illumination adds too much light, and alters original look of game, NOT VANILLA DONT USE)
+// USE HDAO (HQ) instead of HBAO (PERF) for SSAO
 // r2_ls_bloom_fast adds too much blur, and alters original look of game, NOT VANILLA DONT USE)
 // -smap4096 command line parameter for max quality shadows
 // texture_lod is Texture Detail in Video options, 0 is max quality, 4 is max performance
@@ -159,6 +160,9 @@ r2_soft_particles on
 r2_soft_water on
 r2_ssa_lod_a 96.
 r2_ssa_lod_b 64.
+r2_ssao st_opt_ultra
+r2_ssao_hbao off
+r2_ssao_hdao on
 r2_sun on
 r2_sun_depth_far_bias 0
 r2_sun_depth_far_scale 1.
