--- a/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHQ.ltx
+++ b/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHQ.ltx
@@ -163,6 +163,7 @@ r2_ssa_lod_b 64.
 r2_ssao st_opt_ultra
 r2_ssao_hbao off
 r2_ssao_hdao on
+r2_ssao_mode ui_mm_hdao
 r2_sun on
 r2_sun_depth_far_bias 0
 r2_sun_depth_far_scale 1.
