--- a/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHQ.ltx
+++ b/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHQ.ltx
@@ -161,6 +161,7 @@ r2_soft_water on
 r2_ssa_lod_a 96.
 r2_ssa_lod_b 64.
 r2_ssao st_opt_ultra
+r2_ssao_blur on
 r2_ssao_hbao off
 r2_ssao_hdao on
 r2_ssao_mode ui_mm_hdao
