--- a/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHQ.ltx
+++ b/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHQ.ltx
@@ -165,6 +165,7 @@ r2_ssao_blur on
 r2_ssao_hbao off
 r2_ssao_hdao on
 r2_ssao_mode ui_mm_hdao
+r2_steep_parallax on
 r2_sun on
 r2_sun_depth_far_bias 0
 r2_sun_depth_far_scale 1.
