--- a/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHQ.ltx
+++ b/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHQ.ltx
@@ -169,6 +169,7 @@ r2_steep_parallax on
 r2_sun on
 r2_sun_details on
 r2_sun_focus on
+r2_sun_shafts st_opt_high
 r2_sun_tsm on
 r2_tf_mipbias -2.00000
 r2_tonemap on
