--- a/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHQ.ltx
+++ b/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHQ.ltx
@@ -2,6 +2,7 @@
 // r1 = DirectX 8 mode
 // r2 = DirectX 9 mode
 // r3 = DirectX 10 mode
+// r4 = DirectX 11 mode
 // r2_gi (Global Illumination adds too much light, and alters original look of game, NOT VANILLA DONT USE)
 // USE HDAO (HQ) instead of HBAO (PERF) for SSAO
 // r2_ls_bloom_fast adds too much blur, and alters original look of game, NOT VANILLA DONT USE)
