--- a/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHQ.ltx
+++ b/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHQ.ltx
@@ -16,6 +16,7 @@
 // r2_aa = software antialiasing
 // r2_allow_d1_lights 1 enables DX8 lighting (KEEP DISABLED)
 // r2_slight_fade sets distance of lighting
+// r3_dynamic_wet_surfaces_sm_res controls wet surfaces resolution, 2048 max quality, 64 low quality
 
 // 4:3 resolutions are required to fix minor shadow glitches on the left and right edges of the screen when using 16:9 resolutions
 
@@ -172,6 +173,7 @@ r2_tf_mipbias -2.00000
 r2_tonemap on
 r2_wait_sleep 0
 r2_zfill off
+r3_dynamic_wet_surfaces_sm_res 2048
 r__detail_density 0.2
 r__geometry_lod 1.2
 r__supersample 4
