--- a/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHQ.ltx
+++ b/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHQ.ltx
@@ -178,6 +178,7 @@ r3_dynamic_wet_surfaces_sm_res 2048
 r3_gbuffer_opt on
 r3_use_dx10_1 on
 r3_volumetric_smoke on
+r4_enable_tessellation on
 r__detail_density 0.2
 r__geometry_lod 1.2
 r__supersample 4
