--- a/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHQ.ltx
+++ b/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHQ.ltx
@@ -180,6 +180,7 @@ r3_use_dx10_1 on
 r3_volumetric_smoke on
 r4_enable_tessellation on
 r__detail_density 0.2
+r__dtex_range 175
 r__geometry_lod 1.2
 r__supersample 4
 r__tf_aniso 16
