--- a/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHQ.ltx
+++ b/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHQ.ltx
@@ -13,6 +13,7 @@
 // r__detail_density is Grass Density in Video options, 0.2 is max quality, 0.6 is max performance
 // r__supersample is Antialiasing in Video options, 4 is max quality, 1 is max performance
 // r__tf_aniso is Anisotropic filtering in Video options, 16 is max quality, 1 is max performance
+// r__dtex_range 175 is high quality, 5 is low quality
 // r2_aa = software antialiasing
 // r2_allow_d1_lights 1 enables DX8 lighting (KEEP DISABLED)
 // r2_slight_fade sets distance of lighting
