--- a/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHQ.ltx
+++ b/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHQ.ltx
@@ -185,7 +185,9 @@ r__dtex_range 175
 r__geometry_lod 1.2
 r__supersample 4
 r__tf_aniso 16
-renderer renderer_r2
+r_gunshot_shadows on
+r_mtb_grass_draw_distance 400.
+renderer renderer_r4
 rs_c_brightness 1.
 rs_c_contrast 1.
 rs_c_gamma 1.
