--- a/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHQ.ltx
+++ b/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHQ.ltx
@@ -19,7 +19,7 @@
 // r2_slight_fade sets distance of lighting
 // r3_dynamic_wet_surfaces_sm_res controls wet surfaces resolution, 2048 max quality, 64 low quality
 
-// 4:3 resolutions are required to fix minor shadow glitches on the left and right edges of the screen when using 16:9 resolutions
+// TWEAK vid_mode TO DESIRED RESOLUTION BEFORE LAUNCH
 
 _preset Extreme
 _frame_limit 999
