--- a/S.T.A.L.K.E.R.: Shadow of Chernobyl/userHQ.ltx
+++ b/S.T.A.L.K.E.R.: Shadow of Chernobyl/userHQ.ltx
@@ -19,6 +19,8 @@
 
 // 4:3 resolutions are required to fix minor shadow glitches on the left and right edges of the screen when using 16:9 resolutions
 
+// TWEAK vid_mode TO DESIRED RESOLUTION BEFORE LAUNCH
+
 _preset Extreme
 _frame_limit 999
 ai_use_torch_dynamic_lights on
@@ -138,7 +140,7 @@ ph_frequency 100.00000
 ph_iterations 38
 r1_detail_textures on
 r1_dlights on
-r1_dlights_clip 75.
+// r1_dlights_clip 75.
 r1_glows_per_frame 32
 r1_lmodel_lerp 0.1
 r1_pps_u 0.
@@ -147,30 +149,30 @@ r1_ssa_lod_a 96.
 r1_ssa_lod_b 64.
 r1_tf_mipbias -0.5
 r2_aa off
-r2_aa_break 0.800000,0.500000,0.000000
-r2_aa_kernel 0.5
-r2_aa_weight 0.250000,0.250000,0.000000
+// r2_aa_break 0.800000,0.500000,0.000000
+// r2_aa_kernel 0.5
+// r2_aa_weight 0.250000,0.250000,0.000000
 r2_allow_r1_lights off
 r2_gi off
-r2_gi_clip 0.001
-r2_gi_depth 1
-r2_gi_photons 16
-r2_gi_refl 0.9
-r2_gloss_factor 1.5
+// r2_gi_clip 0.001
+// r2_gi_depth 1
+// r2_gi_photons 16
+// r2_gi_refl 0.9
+// r2_gloss_factor 1.5
 r2_ls_bloom_fast off
-r2_ls_bloom_kernel_b 0.7
-r2_ls_bloom_kernel_g 3.
-r2_ls_bloom_kernel_scale 0.7
-r2_ls_bloom_speed 100.
-r2_ls_bloom_threshold 0.001
-r2_ls_depth_bias -0.0003
-r2_ls_depth_scale 1.00001
-r2_ls_dsm_kernel 0.7
-r2_ls_psm_kernel 0.7
+// r2_ls_bloom_kernel_b 0.7
+// r2_ls_bloom_kernel_g 3.
+// r2_ls_bloom_kernel_scale 0.7
+// r2_ls_bloom_speed 100.
+// r2_ls_bloom_threshold 0.001
+// r2_ls_depth_bias -0.0003
+// r2_ls_depth_scale 1.00001
+// r2_ls_dsm_kernel 0.7
+// r2_ls_psm_kernel 0.7
 r2_ls_squality 1.
-r2_ls_ssm_kernel 0.7
+// r2_ls_ssm_kernel 0.7
 r2_mblur 0.
-r2_parallax_h 0.02
+// r2_parallax_h 0.02
 r2_slight_fade 2.
 r2_ssa_lod_a 96.
 r2_ssa_lod_b 64.
@@ -181,24 +183,24 @@ r2_sun_depth_near_bias -0.00001
 r2_sun_depth_near_scale 1.
 r2_sun_details on
 r2_sun_focus on
-r2_sun_lumscale 1.
-r2_sun_lumscale_amb 0.5
-r2_sun_lumscale_hemi 1.
+// r2_sun_lumscale 1.
+// r2_sun_lumscale_amb 0.5
+// r2_sun_lumscale_hemi 1.
 r2_sun_near 20.
 r2_sun_near_border 1.00
 r2_sun_tsm on
-r2_sun_tsm_bias -0.01
-r2_sun_tsm_proj 0.3
+// r2_sun_tsm_bias -0.01
+// r2_sun_tsm_proj 0.3
 r2_tf_mipbias -0.5
 r2_tonemap on
-r2_tonemap_adaptation 1.
-r2_tonemap_amount 0.7
-r2_tonemap_lowlum 0.0001
-r2_tonemap_middlegray 0.6
+// r2_tonemap_adaptation 1.
+// r2_tonemap_amount 0.7
+// r2_tonemap_lowlum 0.0001
+// r2_tonemap_middlegray 0.6
 r2_wait_sleep 0
 r2_zfill off
-r2_zfill_depth 0.5
-r2em 2.2
+// r2_zfill_depth 0.5
+// r2em 2.2
 r__detail_density 0.2
 r__geometry_lod 1.2
 r__supersample 4
