--- a/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHQ.ltx
+++ b/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHQ.ltx
@@ -21,6 +21,8 @@
 
 // TWEAK vid_mode TO DESIRED RESOLUTION BEFORE LAUNCH
 
+// CONFIG DIR: %USERPROFILE%\Saved Games\STALKER Shadow of Chornobyl - EE\STEAM
+
 _preset Extreme
 _frame_limit 999
 ai_use_torch_dynamic_lights on
