--- a/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHQ.ltx
+++ b/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHQ.ltx
@@ -193,7 +193,8 @@ renderer renderer_r4
 rs_c_brightness 1.
 rs_c_contrast 1.
 rs_c_gamma 1.
-rs_fullscreen on
+rs_display_mode ui_mm_fullscreen
+// rs_fullscreen on
 rs_refresh_60hz off
 rs_stats off
 rs_v_sync off
