--- a/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHQ.ltx
+++ b/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHQ.ltx
@@ -23,11 +23,17 @@
 
 // CONFIG DIR: %USERPROFILE%\Saved Games\STALKER Shadow of Chornobyl - EE\STEAM
 
+EULA_Accept 1
 _preset Extreme
 _frame_limit 999
 ai_use_torch_dynamic_lights on
 ai_use_torch_spot_light on
 ai_use_torch_spot_light_shadows on
+autoaim_enabled off
+autoaim_enabledtracking off
+autoaim_strenght 0.0
+bAllowControllerAdaptiveTrig 0
+bEnableControllerSpeaker 0
 bemsg 1
 unbindall
 bind left kLEFT
@@ -122,6 +128,14 @@ mm_net_use_battleye off
 mm_net_weather_rateofchange 1.
 mouse_invert off
 mouse_sens 0.12
+mtb_fsr_allow_async_compute off
+mtb_fsr_enable_sharpen off
+mtb_fsr_frame_generation off
+mtb_fsr_reactivemask_apply_inversetonemap off
+mtb_fsr_reactivemask_apply_threshold off
+mtb_fsr_reactivemask_apply_tonemap off
+mtb_fsr_reactivemask_apply_usecomponentsmax off
+mtb_motionblur off
 net_cl_icurvesize 0
 net_cl_icurvetype 0
 net_cl_interpolation 0.
