--- a/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHQ.ltx
+++ b/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHQ.ltx
@@ -19,6 +19,7 @@
 // r2_slight_fade sets distance of lighting
 // r3_dynamic_wet_surfaces_sm_res controls wet surfaces resolution, 2048 max quality, 64 low quality
 // mtb_sss = SubSurface Scattering (SSS) / SubSurface Light Transport (SSLT)
+// mtb_ssgi = Screen Space Global Illumination (SSGI)
 
 // TWEAK vid_mode TO DESIRED RESOLUTION BEFORE LAUNCH
 
