--- a/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHQ.ltx
+++ b/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHQ.ltx
@@ -149,11 +149,11 @@ mtb_sss on
 mtb_volumetricLighting_numslices 100
 mtb_volumetric_lighting_render_mode full_res
 mtb_vrs off
-mtb_ssgi off
-mtb_ssgi_compute off
-mtb_ssgi_compute_classify off
+mtb_ssgi on
+mtb_ssgi_compute on
+mtb_ssgi_compute_classify on
 mtb_ssgi_debug off
-mtb_ssgi_pixel_tiled_render off
+mtb_ssgi_pixel_tiled_render on
 mtb_fsr_allow_async_compute off
 mtb_fsr_enable_sharpen off
 mtb_fsr_frame_generation off
