--- a/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHQ.ltx
+++ b/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHQ.ltx
@@ -21,6 +21,7 @@
 // _frame_limit CANT BE SET TO 999, 75 IS MAX, MUST USE 0
 // mtb_sss = Screen Space Shadows
 // mtb_ssgi = Screen Space Global Illumination (SSGI)
+// SSAO = Screen Space Ambient Occulsion
 // SSGI CANT BE USED WITH SSAO, SSGI IS MORE HQ THAN SSAO
 
 // TWEAK vid_mode TO DESIRED RESOLUTION BEFORE LAUNCH
