--- a/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHQ.ltx
+++ b/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHQ.ltx
@@ -23,6 +23,7 @@
 // mtb_ssgi = Screen Space Global Illumination (SSGI)
 // SSAO = Screen Space Ambient Occulsion
 // SSGI CANT BE USED WITH SSAO, SSGI IS MORE HQ THAN SSAO
+// r2_gi and mtb_ssgi are two different methods, SSGI is better than traditional GI
 
 // TWEAK vid_mode TO DESIRED RESOLUTION BEFORE LAUNCH
 
