--- a/S.T.A.L.K.E.R.: Shadow of Chernobyl/userHQ.ltx
+++ b/S.T.A.L.K.E.R.: Shadow of Chernobyl/userHQ.ltx
@@ -4,6 +4,11 @@
 // r3 = DirectX 10 mode
 // r4 = DirectX 11 mode
 // r2_gi (Global Illumination adds too much light, and alters original look of game, NOT VANILLA DONT USE)
+// r2_ssao: st_opt_off / st_opt_ultra
+// r2_ssao_mode: ui_mm_hdao / ui_mm_hbao
+// High Definition Ambient Occultion (HDAO)
+// Horizon Based Ambient Occlusion (HBAO)
+// HDAO = ATI cards / HBAO = NVidia cards
 // r2_ls_bloom_fast adds too much blur, and alters original look of game, NOT VANILLA DONT USE)
 // -smap4096 command line parameter for max quality shadows
 // texture_lod is Texture Detail in Video options, 0 is max quality, 4 is max performance
