--- a/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHQ.ltx
+++ b/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHQ.ltx
@@ -1,4 +1,5 @@
 // Shadow of Chornobyl Enhanced Edition High Quality Script
+// SSGI ENABLED AND SSAO DISABLED
 // r1 = DirectX 8 mode
 // r2 = DirectX 9 mode
 // r3 = DirectX 10 mode
