--- a/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDSSGIHQ.ltx
+++ b/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDSSGIHQ.ltx
@@ -24,6 +24,8 @@
 // r2_slight_fade sets distance of lighting
 // r3_dynamic_wet_surfaces_sm_res controls wet surfaces resolution, 2048 max quality, 64 low quality
 // _frame_limit CANT BE SET TO 999, 75 IS MAX, MUST USE 0
+// mtb_upscaler_type: st_opt_off / FSR
+// mtb_ssr_state = Screen Space Reflections
 // mtb_sss = Screen Space Shadows
 // mtb_ssgi = Screen Space Global Illumination (SSGI)
 // SSAO = Screen Space Ambient Occulsion
@@ -171,6 +173,13 @@ mtb_fsr_reactivemask_apply_threshold off
 mtb_fsr_reactivemask_apply_tonemap off
 mtb_fsr_reactivemask_apply_usecomponentsmax off
 mtb_motionblur off
+mtb_upscale_quality ut_opt_native
+mtb_upscaler_type st_opt_off
+mtb_ssr_state on
+mtb_ssr_compute on
+mtb_ssr_compute_classify on
+mtb_ssr_compute_tiled_render on
+mtb_ssr_pixel_tiled_render on
 net_cl_icurvesize 0
 net_cl_icurvetype 0
 net_cl_interpolation 0.
