--- a/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHDAOAMD.ltx
+++ b/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHDAOAMD.ltx
@@ -171,6 +171,13 @@ mtb_fsr_reactivemask_apply_threshold off
 mtb_fsr_reactivemask_apply_tonemap off
 mtb_fsr_reactivemask_apply_usecomponentsmax off
 mtb_motionblur off
+mtb_upscale_quality ut_opt_native
+mtb_upscaler_type st_opt_off
+mtb_ssr_state on
+mtb_ssr_compute on
+mtb_ssr_compute_classify on
+mtb_ssr_compute_tiled_render on
+mtb_ssr_pixel_tiled_render on
 net_cl_icurvesize 0
 net_cl_icurvetype 0
 net_cl_interpolation 0.
