--- a/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHDAOAMD.ltx
+++ b/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHDAOAMD.ltx
@@ -26,6 +26,8 @@
 // _frame_limit CANT BE SET TO 999, 75 IS MAX, MUST USE 0
 // mtb_sss = Screen Space Shadows
 // mtb_ssgi = Screen Space Global Illumination (SSGI)
+// mtb_upscaler_type: st_opt_off / FSR
+// mtb_ssr_state = Screen Space Reflections
 // SSAO = Screen Space Ambient Occulsion
 // SSGI CANT BE USED WITH SSAO, SSGI IS MORE HQ THAN SSAO
 // r2_gi and mtb_ssgi are two different methods, SSGI is better than traditional GI
