--- a/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHDAOAMD.ltx
+++ b/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHDAOAMD.ltx
@@ -180,6 +180,7 @@ mtb_ssr_compute on
 mtb_ssr_compute_classify on
 mtb_ssr_compute_tiled_render on
 mtb_ssr_pixel_tiled_render on
+mtb_sunfilter on
 net_cl_icurvesize 0
 net_cl_icurvetype 0
 net_cl_interpolation 0.
