--- a/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHBAONV.ltx
+++ b/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHBAONV.ltx
@@ -235,6 +235,7 @@ r2_tf_mipbias -2.00000
 r2_tonemap on
 r2_wait_sleep 0
 r2_zfill off
+r2_sun_quality st_opt_high
 r3_dynamic_wet_surfaces on
 r3_dynamic_wet_surfaces_sm_res 2048
 r3_gbuffer_opt on
