--- a/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDSSGIHQ.ltx
+++ b/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDSSGIHQ.ltx
@@ -241,6 +241,8 @@ r3_dynamic_wet_surfaces_sm_res 2048
 r3_gbuffer_opt on
 r3_use_dx10_1 on
 r3_volumetric_smoke on
+r3_msaa 4x
+r3_msaa_alphatest st_opt_atest_msaa_dx10_1
 r4_enable_tessellation on
 r__detail_density 0.2
 r__dtex_range 175
