--- a/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHDAOAMD.ltx
+++ b/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHDAOAMD.ltx
@@ -31,6 +31,7 @@
 // SSAO = Screen Space Ambient Occulsion
 // SSGI CANT BE USED WITH SSAO, SSGI IS MORE HQ THAN SSAO
 // r2_gi and mtb_ssgi are two different methods, SSGI is better than traditional GI
+r3_msaa (4x) appears to have been removed from the enhanced versions in favor of mtb_aa_method
 
 // TWEAK vid_mode TO DESIRED RESOLUTION BEFORE LAUNCH
 
