--- a/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHBAONV.ltx
+++ b/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHBAONV.ltx
@@ -32,6 +32,7 @@
 // SSGI CANT BE USED WITH SSAO, SSGI IS MORE HQ THAN SSAO
 // r2_gi and mtb_ssgi are two different methods, SSGI is better than traditional GI
 // r3_msaa (4x) appears to have been removed from the enhanced versions in favor of mtb_aa_method
+// "mtb_ssr_compute_classify on" in console or config file will crash the game at the loading screen before going in-game
 
 // TWEAK vid_mode TO DESIRED RESOLUTION BEFORE LAUNCH
 
