--- a/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDSSGIHQ.ltx
+++ b/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDSSGIHQ.ltx
@@ -32,6 +32,8 @@
 // SSGI CANT BE USED WITH SSAO, SSGI IS MORE HQ THAN SSAO
 // r2_gi and mtb_ssgi are two different methods, SSGI is better than traditional GI
 // r3_msaa (4x) appears to have been removed from the enhanced versions in favor of mtb_aa_method
+// r3_msaa: st_opt_off / 2x / 4x
+// r3_msaa_alphatest: st_opt_off / st_opt_atest_msaa_dx10_0 / st_opt_atest_msaa_dx10_1
 // mtb_ssr_compute_classify enabled in console or config file will crash the game at the loading screen before going in-game
 
 // TWEAK vid_mode TO DESIRED RESOLUTION BEFORE LAUNCH
@@ -243,8 +245,8 @@ r3_dynamic_wet_surfaces_sm_res 2048
 r3_gbuffer_opt on
 r3_use_dx10_1 on
 r3_volumetric_smoke on
-r3_msaa 4x
-r3_msaa_alphatest st_opt_atest_msaa_dx10_1
+r3_msaa st_opt_off
+r3_msaa_alphatest st_opt_off
 r4_enable_tessellation on
 r__detail_density 0.2
 r__dtex_range 175
