--- a/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDSSGIHQ.ltx
+++ b/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDSSGIHQ.ltx
@@ -181,7 +181,7 @@ mtb_upscale_quality ut_opt_native
 mtb_upscaler_type st_opt_off
 mtb_ssr_state on
 mtb_ssr_compute on
-mtb_ssr_compute_classify on
+mtb_ssr_compute_classify off
 mtb_ssr_compute_tiled_render on
 mtb_ssr_pixel_tiled_render on
 mtb_sunfilter on
