--- a/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHDAOAMD.ltx
+++ b/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHDAOAMD.ltx
@@ -274,11 +274,11 @@ snd_targets 24
 snd_volume_eff 1.
 snd_volume_music 1.
 sv_anomalies_enabled 1
-sv_anomalies_length 3
-sv_artefact_respawn_delta 30
-sv_artefact_spawn_force 0
-sv_artefact_stay_time 3
-sv_artefacts_count 10
+// sv_anomalies_length 3
+// sv_artefact_respawn_delta 30
+// sv_artefact_spawn_force 0
+// sv_artefact_stay_time 3
+// sv_artefacts_count 10
 sv_auto_team_balance 0
 sv_auto_team_swap 1
 sv_bearercantsprint 1
@@ -293,21 +293,21 @@ sv_fraglimit 10
 sv_friendly_indicators 0
 sv_friendly_names 0
 sv_friendlyfire 1.
-sv_hail_to_winner_time 7
+// sv_hail_to_winner_time 7
 sv_max_ping_limit 2000
 sv_pda_hunt 1
-sv_reinforcement_time 0
+// sv_reinforcement_time 0
 sv_remove_corpse 1
 sv_remove_weapon 1
 sv_returnplayers 1
-sv_rpoint_freeze_time 0
+// sv_rpoint_freeze_time 0
 sv_shieldedbases 1
 sv_spectr_firsteye 1
 sv_spectr_freefly 0
 sv_spectr_freelook 1
 sv_spectr_lookat 1
 sv_spectr_teamcamera 1
-sv_statistic_collect 1
+sv_statistic_collect 0
 sv_teamkill_limit 3
 sv_teamkill_punish 1
 sv_timelimit 0
