--- a/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDSSGIHQ.ltx
+++ b/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDSSGIHQ.ltx
@@ -28,6 +28,7 @@
 // mtb_ssr_state = Screen Space Reflections
 // mtb_sss = Screen Space Shadows
 // mtb_ssgi = Screen Space Global Illumination (SSGI)
+// mtb_ssgi enabled produces film grain effect on lights that can be undesirable
 // SSAO = Screen Space Ambient Occulsion
 // SSGI CANT BE USED WITH SSAO, SSGI IS MORE HQ THAN SSAO
 // r2_gi and mtb_ssgi are two different methods, SSGI is better than traditional GI
