--- a/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHBAONV.ltx
+++ b/S.T.A.L.K.E.R.: Shadow of Chernobyl/userENHANCEDHBAONV.ltx
@@ -26,6 +26,7 @@
 // _frame_limit CANT BE SET TO 999, 75 IS MAX, MUST USE 0
 // mtb_sss = Screen Space Shadows
 // mtb_ssgi = Screen Space Global Illumination (SSGI)
+// mtb_ssgi enabled produces film grain effect on lights that can be undesirable
 // mtb_upscaler_type: st_opt_off / FSR
 // mtb_ssr_state = Screen Space Reflections
 // SSAO = Screen Space Ambient Occulsion
